--- a/style.css
+++ b/style.css
@@ -111,3 +111,102 @@ html,body{
     background-size: cover;
     background-position: 0 15%;
 }
+
+@media (max-width: 600px){
+
+    #nav{
+        height: 60px;
+        gap: 14px;
+        padding: 0 20px;
+    }
+    #nav h4{
+        font-size: 12px;
+        font-weight: 800;
+    }
+    #nav i{
+        background-color: rgb(0, 0, 0);
+        color: white;
+        font-size: 13px;
+        padding: 5px;
+        border-radius: 50%;
+        font-weight: 600;
+         
+    }
+
+    #center{
+        width: 100%;
+        /* background-color: red; */
+        padding: 7px 13px;
+        margin-bottom: 17px;
+        margin-top: 14px;
+       
+    }
+    #center h1{ 
+        /* font-size: 60px; */
+        font-size: 9vw;
+        font-weight: 600px;
+        /* line-height: 80px; */
+        line-height: 11vw;
+        color: rgb(31, 31, 31);
+    }
+    #center-in{
+        height: 100px;
+        width: 100;
+        margin-top: 10px;
+        margin-bottom: 40 px;
+        /* background-color: red; */
+        display: flex;
+        gap: 5px;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    #center-in p{
+        /* font-size: 18px; */
+        font-size: 3.1vw;
+        font-weight: 600;
+        line-height: 4.2vw;
+        color: rgb(54, 52, 52);
+        margin-bottom: 15px;
+    }
+    #right{
+        width 100%;
+       line-height: 6px;
+    
+       
+    }
+    .elem{
+        
+        padding: 11px 0px;
+        border-top: 1px solid #000;
+        margin-right: 15px;
+        color: #080808;
+        display:flex;
+        align-items: center;
+        justify-content: space-between;
+        
+    }
+    .elem i{
+        font-size: 14px;
+        font-weight: 500;
+        margin-left: 100px;
+        opacity: 1;
+    }
+    .elem a{
+        color: #2e2b2b;
+        text-decoration: none;
+        font-weight: 800px;
+        font-size: 14px;
+        display: flex;
+        
+      
+    }
+    #bottom{
+        height: 42%;
+        width: 100%;
+        background-color: red;
+        background-image: url(https://images.unsplash.com/photo-1436831135709-48bdc150cce5?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+        background-size: cover;
+        background-position: 0 15%;
+    }
+
+}
